[website] Fix image overflow issue in DoDont (#3971)

--- a/aksel.nav.no/website/app/_ui/do-dont/DoDont.module.css
+++ b/aksel.nav.no/website/app/_ui/do-dont/DoDont.module.css
@@ -2,6 +2,7 @@
   border: 1px solid var(--ax-border-default);
   border-radius: var(--ax-border-radius-xlarge);
   height: fit-content;
+  overflow: hidden;
 }
 
 .doDontNotch {
